--- a/assets/style.css
+++ b/assets/style.css
@@ -14,6 +14,9 @@ header {
     justify-content: space-between;
 }
 
+h3 {
+    margin: 20px;
+}
 header div {
     margin: 20px 20px;
 }
@@ -39,4 +42,26 @@ main section {
     align-items: center;
     width: 75%;
     height: 500px;
+}
+
+.quizBox {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.answer-bank {
+    display: flex;
+    flex-direction: column;
+}
+.quiz-button {
+    background-color: aqua;
+    padding: 3px 10px;
+    margin-bottom: 5px;
+}
+
+.quiz-button:hover {
+    background-color: blueviolet;
+    color: whitesmoke;
 }
